@@ -86,3 +86,4 @@
 - Implemented futile_union_intersection_subtraction general optimization
 - Implemented swap_rename_projection general optimization
 - Replaced old relational algebra to python compiler with new one based on the new tokenizer/parser (Rev 188)
+- Code refactory to move the new parser into parser.py out of optimizer.py, that will still be compatible (Rev 190)
